--- a/trial.css
+++ b/trial.css
@@ -5,6 +5,13 @@
 	transform: translateX(-50%) translateY(-50%);
 }
 
+.bottom-center-of-the-screen {
+	position: fixed;
+	bottom: 0%;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
 table.frame {
 	table-layout: fixed;
 	border-collapse: collapse;
