--- a/trial.css
+++ b/trial.css
@@ -12,6 +12,12 @@
 	transform: translateX(-50%);
 }
 
+.as-large-as-fits {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
+
 table.frame {
 	table-layout: fixed;
 	border-collapse: collapse;
